syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";

message CalculatorRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

message CalculatorResponse {
  int32 sum = 1;
}

service CalculatorService {
  
    rpc Add(CalculatorRequest) returns (CalculatorResponse);
}